@@ -193,6 +193,8 @@ script for Slurm?</a></li>
     enabled applications?</a></li>
 <li><a href="#opencl_pmix">Why is Multi-Instance GPU not working with Slurm and
     PMIx, and complaining about GPUs being 'In use by another client'?</a></li>
+<li><a href="#tmpfs_jobcontainer">How can I set up a private /tmp and /dev/shm for
+    jobs on my machine?</a></li>
 </ul>
 
 <h2>For Management</h2>
@@ -2273,6 +2275,55 @@ to not query OpenCL devices by setting the
 variable for slurmd, i.e. setting this variable in systemd unit file for slurmd.
 </p>
 
-<p style="text-align:center;">Last modified 26 January 2021</p>
+<p><a id="tmpfs_jobcontainer"><b>How can I set up a private /tmp and /dev/shm for
+    jobs on my machine?</b></a>
+<br/>
+Tmpfs job container plugin can be used by including
+<i>JobContainerType=job_container/tmpfs</i>
+in your slurm.conf file. It additionally requires a
+<a href="namespace.conf.html">namespace.conf</a> file to be
+set up which is further described in the man page.
+Tmpfs plugin creates a private mount namespace inside of which it mounts a
+private /tmp to a location that is configured in namespace.conf. The basepath
+is used to construct the mount path, by creating a job specific directory inside it
+and mounting /tmp to it. Since all the mounts are created inside of a mount
+namespace which is private, they are only visible inside the job. Hence this
+proves to be a useful solution for jobs that are on shared nodes, since each
+job can only view mounts created in their own mount namespace. A private
+/dev/shm is also mounted to isolate it between different jobs.</p>
+<p>
+Mount namespace construction also happens before job's spank environment is
+set up. Hence all spank related job steps will view only private /tmp the
+plugin creates. The plugin also provides an optional initialization script that
+is invoked before the job's namespace is constructed. This can be useful for
+any site specific customization that may be necessary.</p>
+<pre>
+parallels@linux_vb:~$ echo $SLURM_JOB_ID
+7
+parallels@linux_vb:~$ findmnt -o+PROPAGATION | grep /tmp
+└─/tmp  /dev/sda1[/storage/7/.7] ext4  rw,relatime,errors=remount-ro,data=ordered   private
+</pre>
+<p>In the example above, <i>BasePath</i> points to /storage and a slurm job with
+job id 7 is set up to mount /tmp on /storage/7/.7. When user from inside a job
+tries to look up mounts, they can see that their /tmp is mounted. However
+they are prevented from mistakenly accessing the backing directory directly.</p>
+<pre>
+parallels@linux_vb:~$ cd /storage/7/
+bash: cd: /storage/7/: Permission denied
+</pre>
+<p>They are allowed to access (read/write) /tmp only.</p>
+<p>
+Additionally pam_slurm_adopt has also been extended to support this functionality.
+If a user starts an ssh session which is managed by pam_slurm_adopt, then
+the user's process joins the namespace that is constructed by tmpfs plugin.
+Hence in ssh sessions, user has the same view of /tmp and /dev/shm as
+their job. This functionality is enabled by default in pam_slurm_adopt
+but can be disabled explicitly by appending <i>join_container=false</i> as shown:</p>
+<pre>
+account	sufficient  pam_slurm_adopt.so join_container=false
+</pre>
+
+
+<p style="text-align:center;">Last modified 4 March 2021</p>
 
 <!--#include virtual="footer.txt"-->
