@@ -41,6 +41,7 @@ Documentation for other versions of Slurm is distributed with the code</b></p>
 <tr><td><a href="slurm.conf.html">slurm.conf</a></td><td>Slurm configuration file</td></tr>
 <tr><td><a href="slurmdbd.conf.html">slurmdbd.conf</a></td><td>Slurm Database Daemon (SlurmDBD) configuration file</td></tr>
 <tr><td><a href="topology.conf.html">topology.conf</a></td><td>Slurm configuration file for defining the network topology</td></tr>
+<tr><td><a href="namespace.conf.html">namespace.conf</a></td><td>Slurm configuration file for configuring tmpfs job container plugin</td></tr>
 </table>
 
 <h2>Daemons and Other</h2>
@@ -53,6 +54,6 @@ Documentation for other versions of Slurm is distributed with the code</b></p>
 <tr><td><a href="spank.html">SPANK</a></td><td>Slurm Plug-in Architecture for Node and job (K)control</td></tr>
 </table>
 
-<p style="text-align:center;">Last modified 25 February 2021</p>
+<p style="text-align:center;">Last modified 3 March 2021</p>
 
 <!--#include virtual="footer.txt"-->
